--- a/model_1_finMark.ipynb
+++ b/model_1_finMark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "abe67b43",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "e1f4952a",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 57,
    "id": "2f7c1a34",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
+   "id": "ee56daea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company\n",
+       "Tata Motors    343805\n",
+       "Reliance       318864\n",
+       "Infosys        287226\n",
+       "Wipro          286752\n",
+       "TCS               544\n",
+       "SBI               518\n",
+       "ICICI             516\n",
+       "Adani             491\n",
+       "ONGC              487\n",
+       "HDFC              466\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df['company'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "cd82674d",
    "metadata": {},
    "outputs": [
@@ -156,13 +188,134 @@
     "        merged_df[f'{feature}_zscore'] = (merged_df[feature] - rolling_mean) / (rolling_std + 1e-6)\n",
     "\n",
     "zscore_cols = [f for f in merged_df.columns if '_zscore' in f]\n",
-    "merged_df[zscore_cols] = merged_df[zscore_cols].fillna(0)\n",
-    "merged_df = merged_df.dropna(subset=['revenue_growth']) # Drop rows where financial data is missing"
+    "# merged_df[zscore_cols] = merged_df[zscore_cols].fillna(np.median(merged_df[merged_df[zscore_cols].notna().sum(axis=1) > 0][zscore_cols]))\n",
+    "merged_df[zscore_cols] = merged_df[zscore_cols].fillna(merged_df[zscore_cols].median())\n",
+    "# merged_df = merged_df.dropna(subset=['revenue_growth']) # Drop rows where financial data is missing\n",
+    "merged_df['revenue_growth'] = merged_df['revenue_growth'].fillna(merged_df['revenue_growth'].median())\n",
+    "merged_df['profit_margin'] = merged_df['profit_margin'].fillna(merged_df['profit_margin'].median())\n",
+    "merged_df['debt_to_equity'] = merged_df['debt_to_equity'].fillna(merged_df['debt_to_equity'].median())\n",
+    "merged_df['roe'] = merged_df['roe'].fillna(merged_df['roe'].median())\n",
+    "merged_df['insider_trades'] = merged_df['insider_trades'].fillna(merged_df['insider_trades'].median())\n",
+    "merged_df['label_fin'] = merged_df['label_fin'].fillna(0)\n",
+    "merged_df['filing_type'] = merged_df['filing_type'].fillna('Others')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
+   "id": "0201ebc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1239669 entries, 0 to 1239668\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                  Non-Null Count    Dtype         \n",
+      "---  ------                  --------------    -----         \n",
+      " 0   date                    1239669 non-null  datetime64[ns]\n",
+      " 1   company                 1239669 non-null  object        \n",
+      " 2   price_change_1d         1239669 non-null  float64       \n",
+      " 3   price_change_5d         1239669 non-null  float64       \n",
+      " 4   volatility_post         1239669 non-null  float64       \n",
+      " 5   abnormal_return         1239669 non-null  float64       \n",
+      " 6   volume_spike            1239669 non-null  float64       \n",
+      " 7   label                   1239669 non-null  int64         \n",
+      " 8   revenue_growth          1239669 non-null  float64       \n",
+      " 9   profit_margin           1236647 non-null  float64       \n",
+      " 10  debt_to_equity          1236647 non-null  float64       \n",
+      " 11  roe                     1236647 non-null  float64       \n",
+      " 12  insider_trades          1236647 non-null  float64       \n",
+      " 13  filing_type             1236647 non-null  object        \n",
+      " 14  label_fin               1236647 non-null  float64       \n",
+      " 15  price_change_1d_zscore  1239669 non-null  float64       \n",
+      " 16  volume_spike_zscore     1239669 non-null  float64       \n",
+      " 17  abnormal_return_zscore  1239669 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(14), int64(1), object(2)\n",
+      "memory usage: 170.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "38ead7fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                      0\n",
+       "company                   0\n",
+       "price_change_1d           0\n",
+       "price_change_5d           0\n",
+       "volatility_post           0\n",
+       "abnormal_return           0\n",
+       "volume_spike              0\n",
+       "label                     0\n",
+       "revenue_growth            0\n",
+       "profit_margin             0\n",
+       "debt_to_equity            0\n",
+       "roe                       0\n",
+       "insider_trades            0\n",
+       "filing_type               0\n",
+       "label_fin                 0\n",
+       "price_change_1d_zscore    0\n",
+       "volume_spike_zscore       0\n",
+       "abnormal_return_zscore    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ab266c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company\n",
+       "Tata Motors    343805\n",
+       "Reliance       318864\n",
+       "Infosys        287226\n",
+       "Wipro          286752\n",
+       "TCS               544\n",
+       "SBI               518\n",
+       "ICICI             516\n",
+       "Adani             491\n",
+       "ONGC              487\n",
+       "HDFC              466\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df['company'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "b5cf5132",
    "metadata": {},
    "outputs": [
@@ -170,13 +323,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finalizing data for training...\n"
+      "Finalizing data for training...\n",
+      "Saved company-to-category mapping to 'company_to_category_map.csv'\n"
      ]
     }
    ],
    "source": [
     "# --- 4. Final Data Preparation ---\n",
     "print(\"Finalizing data for training...\")\n",
+    "\n",
+    "# --- ADD THIS PART ---\n",
+    "# Convert company name to a numerical category\n",
+    "merged_df['company_cat'] = merged_df['company'].astype('category').cat.codes\n",
+    "\n",
+    "# Create and save a mapping file for later use in prediction\n",
+    "company_mapping = merged_df[['company', 'company_cat']].drop_duplicates().reset_index(drop=True)\n",
+    "company_mapping.to_csv('data/company_to_category_map.csv', index=False)\n",
+    "print(\"Saved company-to-category mapping to 'company_to_category_map.csv'\")\n",
+    "# --- END OF ADDITION ---\n",
+    "\n",
     "label_cols = [col for col in merged_df.columns if 'label' in col]\n",
     "y = merged_df[label_cols].max(axis=1).fillna(0).astype(int)\n",
     "\n",
@@ -187,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "id": "16ae3ce0",
    "metadata": {},
    "outputs": [
@@ -196,28 +361,28 @@
      "output_type": "stream",
      "text": [
       "Splitting data and training LightGBM model...\n",
-      "[LightGBM] [Info] Number of positive: 479773, number of negative: 447712\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.027950 seconds.\n",
+      "[LightGBM] [Info] Number of positive: 480699, number of negative: 449052\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.026008 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 2308\n",
-      "[LightGBM] [Info] Number of data points in the train set: 927485, number of used features: 10\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.517284 -> initscore=0.069163\n",
-      "[LightGBM] [Info] Start training from score 0.069163\n",
+      "[LightGBM] [Info] Total Bins 2318\n",
+      "[LightGBM] [Info] Number of data points in the train set: 929751, number of used features: 11\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.517019 -> initscore=0.068103\n",
+      "[LightGBM] [Info] Start training from score 0.068103\n",
       "\n",
       "--- Model 1 Evaluation ---\n",
-      "Accuracy: 0.8845\n",
-      "AUC Score: 0.9740\n",
+      "Accuracy: 0.9001\n",
+      "AUC Score: 0.9812\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.82      0.98      0.89    149237\n",
-      "           1       0.97      0.80      0.88    159925\n",
+      "           0       0.84      0.98      0.90    149684\n",
+      "           1       0.98      0.82      0.90    160234\n",
       "\n",
-      "    accuracy                           0.88    309162\n",
-      "   macro avg       0.90      0.89      0.88    309162\n",
-      "weighted avg       0.90      0.88      0.88    309162\n",
+      "    accuracy                           0.90    309918\n",
+      "   macro avg       0.91      0.90      0.90    309918\n",
+      "weighted avg       0.91      0.90      0.90    309918\n",
       "\n"
      ]
     }
@@ -245,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "73ba26af",
    "metadata": {},
    "outputs": [
