--- a/model_2_NLP.ipynb
+++ b/model_2_NLP.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "ea02fa6f",
    "metadata": {},
    "outputs": [],
@@ -349,8 +349,8 @@
     "    if model_1_input is None:\n",
     "        market_financial_risk = 0.5 # Neutral score if no data\n",
     "    else:\n",
-    "        market_financial_risk = model_1.predict_proba(model_1_input[(model_1_input['company_cat']==company_cat)])[:, 1][0]\n",
-    "    print(f\"Market/Financial Risk (Model 1): {market_financial_risk:.2f}\")\n",
+    "        market_financial_risk = model_1.predict_proba(model_1_input[(model_1_input['company_cat']==company_cat)])[:, 1][-1]\n",
+    "    print(f\"Market/Financial Risk (Model 1): {np.median(market_financial_risk):.2f}\")\n",
     "\n",
     "    # Step 2: Get Contradiction Score\n",
     "    contradiction_score = get_contradiction_score(post_text, company, post_date)\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "id": "93c89c85",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "[624 rows x 9 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,6 +607,36 @@
     "social_df = pd.read_csv('data/raw_social_data_labeled (1).csv')\n",
     "icici_posts = social_df[social_df['company'] == 'Reliance']\n",
     "icici_posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "17c3c5ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company\n",
+       "Tata Motors      665\n",
+       "HDFC Bank        655\n",
+       "ICICI Bank       638\n",
+       "Adani Ports      633\n",
+       "Reliance         624\n",
+       "Wipro            618\n",
+       "Infosys          591\n",
+       "Bharti Airtel    576\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "social_df['company'].value_counts()"
    ]
   },
   {
@@ -685,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "4c644db4",
    "metadata": {},
    "outputs": [
@@ -696,11 +726,11 @@
       "\n",
       "--- Validating Post for 'Reliance' on 2023-09-21 ---\n",
       "Post Text: \"Determine board produce pretty night civil weight successful.\"\n",
-      "Market/Financial Risk (Model 1): 0.99\n",
+      "Market/Financial Risk (Model 1): 0.65\n",
       "Contradiction with Press Release: 0.47\n",
       "Advisor Risk Score: 0.50\n",
-      "--- FINAL GENUINITY SCORE: 0.69 ---\n",
-      "Result: High likelihood the post is a genuine warning.\n"
+      "--- FINAL GENUINITY SCORE: 0.55 ---\n",
+      "Result: Moderate likelihood. Worth monitoring.\n"
      ]
     }
    ],
