--- a/model_1_finMark.ipynb
+++ b/model_1_finMark.ipynb
@@ -433,6 +433,55 @@
     "y_test.to_csv('test_data/model_1_y_test_data.csv', index=False)\n",
     "print(\"\\nModel 1 (market-financial) and its feature list have been saved successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6389ccbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "+-------------------------------------------------------------------------------------------------------------------------------+\n",
+    "|                                               APPLICATION DATA FLOW                                                           |\n",
+    "+-------------------------------------------------------------------------------------------------------------------------------+\n",
+    "| PHASE 1: MODEL TRAINING (Offline)                       | PHASE 2: LIVE APP PREDICTION (Real-time)                            |\n",
+    "|                                                         |                                                                     |\n",
+    "|  [Market Data CSV]                                      |   [Social Media CSV in the demo]                                    |\n",
+    "|         |                                               |   [In Final Product, will be real time posts scraped from           |\n",
+    "|         |                                               |     social media sites]                                             |\n",
+    "|         |                                               |          |                                                          |\n",
+    "|         v                                               |          v (User Clicks \"Fetch Post\")                               |\n",
+    "|  [Financial Data CSV]                                   |   \"Post Text, Company, Date, Advisor Name\"                          |\n",
+    "|         |                                               |          |                                                          |\n",
+    "|         v                                               |          +------------------+-----------------+                     |\n",
+    "| +---------------------+                                 |          |                  |                 |                     |\n",
+    "| | Train Model 1       |                                 |          v                  v                 v                     |\n",
+    "| | (LightGBM)          |                                 | [Market/Financial Data]  [Press Release]  [Advisor Data CSV]        |\n",
+    "| +---------------------+                                 |          |                  |                 |                     |\n",
+    "|         |                                               |          v                  v                 v                     |\n",
+    "|         +-----------------+                             |  +---------------+  +-------------------+  +--------------+         |\n",
+    "|         |                 |                             |  |   Model 1     |  | Sentence          |  | Look up      |         |\n",
+    "|         v                 v                             |  |  (.joblib)    |  | Transformer       |  | Advisor      |         |\n",
+    "| [model_1.joblib]  [company_map.csv]                     |  +---------------+  +-------------------+  +- Status------+         |\n",
+    "|                                                         |          |                  |                 |                     |\n",
+    "|                                                         |          v                  v                 v                     |\n",
+    "|                                                         |  Market/Financial      Contradiction        Advisor Risk            |\n",
+    "|                                                         |      Risk Score            Score             Score                  |\n",
+    "|                                                         |          |                  |                 |                     |\n",
+    "|                                                         |          |                  |                 |                     |\n",
+    "|                                                         |          +------------------+-----------------+                     |\n",
+    "|                                                         |                           |                                         |\n",
+    "|                                                         |                           v                                         |\n",
+    "|                                                         |                 +-----------------------+                           |\n",
+    "|                                                         |                 | Calculate Final       |                           |\n",
+    "|                                                         |                 | \"Genuinity Score\"     |                           |\n",
+    "|                                                         |                 +-----------------------+                           |\n",
+    "|                                                         |                           |                                         |\n",
+    "|                                                         |                           v                                         |\n",
+    "|                                                         |                     [Streamlit UI]                                  |\n",
+    "|                                                         |                                                                     |\n",
+    "+-------------------------------------------------------------------------------------------------------------------------------+"
+   ]
   }
  ],
  "metadata": {
